<resources>
    <string name="app_name">ADMIN</string>
    <string name="dmss"> DMSS ADMIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category"> Select Category</string>
    <string name="select_sub_category"> Select Sub Category</string>
    <string name="select_status"> Select Status</string>
    <string name="search"> Search</string>
    <string name="enter_category"> Select Category</string>
    <string name="enter_sub_category"> Select Sub Category</string>
    <string name="select_frequency"> Select Frequency</string>
    <string name="select_days"> Select Days</string>
    <string name="no_of_items"> No of items</string>
    <string name="select_supply_item"> Select Item</string>
    <string name="select_remind_me"> Remind Me</string>
    <string name="select_task">Select Task</string>
    <string name="select_date">Select Date</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="assigned">Assigned</string>
    <string name="completed">Completed</string>
    <string name="assign">Assign</string>
    <string name="enter_name">Enter Name</string>
    <string name="complete">Complete</string>

    <string name="comment">Comment</string>
    <string name="no_assign_person">No assign person available. Do you want to add assign person ?</string>
    <string name="tasks_assigned_success">Tasks Assigned Success..</string>
    <string name="please_select_at_least_one_item">Please Select At least One Item</string>

    <string name="submit">Submit</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>

    <string name="update_task">Tasks</string>
    <string name="view_task">View Task</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="task_update">Task Update</string>
    <string name="today_schedule">Schedule</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="remainders">Reminders</string>
    <string name="supplies">Supplies</string>
    <string name="attendance">Attendance</string>
    <string name="cabins">Cabins</string>
    <string name="games_room">Games Room</string>
    <string name="general_floor">General Floor</string>
    <string name="general_area">General Area</string>
    <string name="work_station">Work Station</string>
    <string name="pantry">Pantry</string>
    <string name="rest_rooms">Rest Rooms</string>
    <string name="reception">Reception</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="assign_to">Assign To</string>

    <string-array name="timings">
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="task_tables">
        <item>Cabins</item>
        <item>Games Room</item>
        <item>Work Station</item>
        <item>Pantry</item>
        <item>Rest Rooms</item>
        <item>General Area</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>