<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".sidemenu.DownloadExcelsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/enter_name"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:clickable="false"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_select_task"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:hint="@string/select_task"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_select_task_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:clickable="false"
            android:drawableEnd="@drawable/down_arrow"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:textAllCaps="false"
        android:id="@+id/assign"
        android:text="@string/assign"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:background="@drawable/orange_b_corner"
        android:layout_marginBottom="@dimen/_55sdp"
        />

</LinearLayout>