<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.dmss.dmssadminmaintanance.dashboard.DashboardFragment">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/bg_view_dashboard" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="-80dp"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:id="@+id/cv_cabins"
            android:layout_row="0"
            android:layout_margin="12dp"
            android:layout_column="0"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/ll_cabins"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/schedule"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cabins"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_margin="12dp"
            android:id="@+id/cv_games_room"
            android:layout_column="1"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/pending_actions"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_room"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/cv_pantry"
            android:layout_margin="12dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/view_task"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pantry"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="12dp"
            android:id="@+id/cv_rest_rooms"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/update_task"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_rooms"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            android:id="@+id/cv_work_station"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/supplies"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_station"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="0"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="12dp"
            android:id="@+id/cv_genral_area"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/settings"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_area"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>


</RelativeLayout>
