<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_55sdp"
    android:background="@color/blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNavMenu"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_menu"
        android:visibility="visible"
        android:tint="@color/white"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/back_arrow"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivToolBarBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/back_arrow"
        android:layout_marginStart="@dimen/_15sdp"
        android:visibility="gone"
        app:color="@color/white"
        android:onClick="back"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tv_toolbar_title"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:src="@drawable/ic_launcher_foreground"
        android:visibility="gone"
        app:color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_toolbar_sub_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="visible"
        android:textColor="@color/white"
        android:text="@string/dmss"
        android:textAlignment="center"
        android:textSize="@dimen/_18sdp"
        app:fontFamily="@font/montserrat_semibold"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_toolbar_heder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        app:color="@color/white"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="@dimen/_20sdp"
        android:text="@string/app_name"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl_iv_photo"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_submit"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/submit"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:background="@drawable/green_button_corner"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivChat"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/back_arrow"
            android:layout_marginEnd="@dimen/_15sdp"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:textSize="@dimen/_8sdp"
            android:visibility="visible"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginEnd="-5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/ivChat"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:visibility="gone"
        android:background="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>